--- a/hw1/02-semantics/02-page-sections.html
+++ b/hw1/02-semantics/02-page-sections.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Lora&family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,700;1,200;1,400&family=Poppins:wght@100;200;300;400&family=Raleway:wght@100;200;300&display=swap"
@@ -14,59 +14,58 @@
          appropriate (built-in) HTML element -->
     <main>
       <h1 class="overall-title">02 - Page Sections</h1>
-      <p class="general-grouped-info">
-        <spam class="sub-title"
-          >Submit Your Application and $60 Application Fee</spam
-        >
-        <spam class="general-text">
+      <div class="general-grouped-info">
+        <p class="sub-title">
+          Submit Your Application and $60 Application Fee
+        </p>
+        <p class="general-text">
           Go to Portland State University's online application system and select
           Create Account. If you have already started an application, or created
           one for a past term, select Log In.
-        </spam>
-        <spam class="general-text">
+        </p>
+        <p class="general-text">
           Undergraduate applicants may be eligible for a waiver of their $60
           admission application fee. Based on the information you provide in
           your application, we will determine if you are eligible for a fee
           waiver.
-        </spam>
-      </p>
-      <p class="general-grouped-info">
-        <spam class="sub-title"
-          >Submit Transcripts from All Schools Attended</spam
-        >
-        <spam class="general-text">
+        </p>
+      </div>
+      <div class="general-grouped-info">
+        <p class="sub-title">
+          Submit Transcripts from All Schools Attended
+        </p>
+        <p class="general-text">
           You are required to submit individual transcripts from each college or
           university where you registered for any coursework. Failure to submit
           individual transcripts from each college or university attended may
           result in a delayed admission decision. Official transcripts are
           required from all the schools you've attended, see our official
           records policy for details.
-        </spam>
-        <spam class="general-text">
+        </p>
+        <p class="general-text">
           Failure to disclose all colleges is a violation of Portland State
           University's student code of conduct.
-        </spam>
-      </p>
-      <p class="general-grouped-info">
-        <spam class="sub-title"
-          >Submit the Free Application for Federal Student Aid
-          (FAFSA)</spam
-        >
-        <spam class="general-text">
+        </p>
+      </div>
+      <div class="general-grouped-info">
+        <p class="sub-title">
+          Submit the Free Application for Federal Student Aid(FAFSA)
+        </p>
+        <p class="general-text">
           Submission of the FAFSA is not required to receive an admission
           decision. We encourage students to submit the FAFSA as soon as
           possible after October 1.
-        </spam>
-      </p>
-      <p class="general-grouped-info">
-        <spam class="sub-title">Check Your Application Status</spam>
-        <spam class="general-text">
+        </p>
+      </div>
+      <div class="general-grouped-info">
+        <p class="sub-title">Check Your Application Status</p>
+        <p class="general-text">
           If you have submitted an application to Portland State University, you
           can log in to PSU's application portal to review the status of your
           application. You will be notified via email for each document you
           submit and your admission decision.
-        </spam>
-      </p>
+        </p>
+      </div>
     </main>
   </body>
 </html>
