--- a/hw1/02-semantics/03-images.html
+++ b/hw1/02-semantics/03-images.html
@@ -12,15 +12,9 @@
   <body>
     <!-- Exercise: Fix all semantics issues in the following HTML structure -->
     <main>
-      <h1 class="overall-title" alt="This represents the assignment three topic" role="Topic title">03 - Images</h1>
-      <img
-        
-        width="300"
-        height="300"
-        class="image"
-        src="../../images/psu-eb.jpg"
-        alt="engineering building at PSU. The time in the image is night." role="Building main image"/>
-      <p class="general-text engineering-building-description" role="description">
+      <h1 class="overall-title"> 03 - Images</h1>
+      <img width="300" height="300" class="image" src="../../images/psu-eb.jpg" alt="engineering building at PSU. The time in the image is night."/>
+      <p class="general-text engineering-building-description" >
         The Engineering Building is a concrete and glass, five-story building
         located on SW 4th Avenue just south of the Fourth Avenue Building and
         City of Portland Development Tower. The basement of the Engineering
