--- a/hw2/02-navbar.html
+++ b/hw2/02-navbar.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <!-- Add your code here -->
+    <div class="MBN">
+      <div>Ex01</div>
+      <div>Ex02</div>
+      <div>Ex03</div>
+      <div>Ex04</div>
+    </div>
     <h1>Exercise 02 - Navbar</h1>
   </body>
 </html>
