--- a/hw2/03-table.html
+++ b/hw2/03-table.html
@@ -11,6 +11,36 @@
     <main>
       <h1>Exercise 03 - TV Listings</h1>
       <!-- Add your code here -->
+      <table class="Channels">
+        <tr class="Channels_Time">
+          <th>Time/Channels</th>
+          <th>8:00 PM</th>
+          <th>9:00 PM</th>
+          <th>10:00 PM</th>
+        </tr>
+        <tr class="program">
+          <th>ABC</th>
+          <th>The Goldbergs</th>
+          <th>Home Economics</th>
+          <th>black-ish</th>
+        </tr>
+        <tr class="program">
+          <th>CBS</th>
+          <th>Young Sheldon</th>
+          <th>United States of Al</th>
+          <th>Mon</th>
+        </tr>
+        <tr class="program">
+          <th>NBC</th>
+          <th colspan="3">Stanley Cup Playoffs</th>
+        </tr>
+        <tr class="program">
+          <th>Fox</th>
+          <th>Beat Shazam</th>
+          <th colspan="2">Local Programming</th>
+        </tr>
+
+      </table>
     </main>
   </body>
 </html>
