--- a/hw2/05-cards.html
+++ b/hw2/05-cards.html
@@ -11,6 +11,36 @@
     <main>
       <h1>Exercise 05 - Cards</h1>
       <!-- Add your code here -->
+      <div class="cards">
+        <div class="card">
+          <h1>Card 1</h1>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSH-0WBHeYcLaGoYEybv01WCJ8yXVTINTRKQZllicYs9A&s" alt="cat with a yello eye">
+          <p>
+            This image is a cat, it has yellow eyes and is likley looking at a cat toy
+            so the image could be taken by the others
+          </p>
+          <p class="More info">Info</p>
+        </div>
+        <div class="card">
+          <h1>Card 2</h1>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzVs-kkfZMKHwG21OmfHGiB_iiA2pvcQqpMMDIrWMn9HhRHiZlFQFjeZc&s" alt="Cat laying on white fur carpet">
+          <p>
+            This image is a cat, the cat is laying on a white fur carpet. With that it seems
+            to be calm and calm.
+          </p>
+          <p class="More info">Info</p>
+        </div>
+        <div class="card">
+          <h1>Card 3</h1>
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTh2TyoQcH4LAbK92lTK00hoXTddhGfZFqMU3KoTv_Jwq6-LixXFhXR4DI&s" alt="This cat is sneaking in a yello background and floor">
+          <p>
+            This image is cat, the cat seems to be in sneaking form walking or heading towards
+            something. With that, the location seems to be studio, in which the background for
+            the image is orange.
+          </p>
+          <p class="More info">Info</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
