--- a/hw1/02-semantics/00-example.html
+++ b/hw1/02-semantics/00-example.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <link
       href="https://fonts.googleapis.com/css2?family=Lora&family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,700;1,200;1,400&family=Poppins:wght@100;200;300;400&family=Raleway:wght@100;200;300&display=swap"
-      rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+      rel="stylesheet" >
+    <link rel="stylesheet" type="text/css" href="styles.css" >
     <title>00 - Example</title>
   </head>
   <body>
@@ -14,13 +14,13 @@
          appropriate (built-in) HTML element -->
     <main>
       <h1 class="overall-title">00 - Example</h1>
-      <p class="greeting-message">
-        Welcome to
-        <spam class="greeting-course-number"
-          >CS4/563 Intro to
-      </spam>
-        <spam class="greeting-course-name">Web Development</spam>
-    </p>
+      <div class="greeting-message">
+        <p>Welcome to </p>
+        <p class="greeting-course-number">
+          CS4/563 Intro to
+        </p>
+        <p class="greeting-course-name">Web Development</p>
+      </div>
     </main>
   </body>
 </html>
