--- a/hw1/02-semantics/01-paragraphs.html
+++ b/hw1/02-semantics/01-paragraphs.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link
       href="https://fonts.googleapis.com/css2?family=Lora&family=Noto+Sans:ital,wght@0,300;0,400;0,500;0,700;1,200;1,400&family=Poppins:wght@100;200;300;400&family=Raleway:wght@100;200;300&display=swap"
-      rel="stylesheet" />
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+      rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
     <title>01 - Paragraphs</title>
   </head>
   <body>
@@ -14,16 +14,16 @@
          appropriate (built-in) HTML element -->
     <main>
       <h1 class="overall-title">01 - Paragraphs</h1>
-      <p class="general-text">
+      <div class="general-text">
         New Student Orientation is an essential part of your undergraduate
         college experience, provides a foundation for success, and is
-        <spam class="boldfaced-text">
+        <p class="boldfaced-text">
           required for all incoming undergraduate students.
-        </spam>
+        </p>
         New Student Orientation will provide you with details about campus life,
         student services, degree requirements, and, upon completion, will
         provide you with course registration access for your first term.
-      </p>
+      </div>
       <p class="general-text">
         View
         <a
