--- a/hw1/02-semantics/04-form.html
+++ b/hw1/02-semantics/04-form.html
@@ -11,29 +11,45 @@
     <main>
       <h1>04 - Form</h1>
       <form>
-        <h2>Create a new database</h2>
         <div>
-        <lable for="organization">Organization</lable>
-        <input type="text" id="organization" name="organization"/>
+          <h2>Create a new database</h2>
         </div>
-        <lable for="database">Database name</lable>
-        <input type="text" id="database" name="database"/>
         <div>
-          Lowercase alphanumeric characters, dashes and underscores only
+          <label for="organization">Organization</label>
+          <input type="text" id="organization" name="organization"/>
         </div>
-        <lable for="region">Region</lable>
-        <input type="text" id="region" name="region"/>
+        <div>
+          <label for="database">Database name</label>
+          <input type="text" id="database" name="database"/>
+        </div>
+        <div>
+          <p>
+            Lowercase alphanumeric characters, dashes and underscores only
+          </p>
+        </div>
+        <div>
+          <label for="region">Region</label>
+          <input type="text" id="region" name="region"/>
+        </div>
         <div>
           For best performance, enter a region closest to your application
         </div>
         <div>
-          <div>Plan type</div>
-          <input type="radio" name="basic" id="basic" value="basic" />
-          <label for="basic">Basic</label>
-          <input type="radio"  name="business" id="business" value="business"/>
-          <label for="business">Business</label>
-          <input type="radio" name="pro" id="pro" value="pro"/>
-          <label for="pro">Pro</label>
+        <fieldset>
+          <legend>Plan type</legend>
+          <div>
+            <input type="radio"  name="plan_type" id="basic" value="basic"/>
+            <label for="basic">Basic Plan</label>
+          </div>
+          <div>
+            <input type="radio"  name="plan_type" id="business" value="business"/>
+            <label for="business">Business</label>
+          </div>
+          <div>
+            <input type="radio" name="plan_type" id="pro" value="pro"/>
+            <label for="pro">Pro</label>
+          </div>
+        </fieldset>
         </div>
         <div>
           <div>Included Fields</div>
