--- a/hw2/04-form.html
+++ b/hw2/04-form.html
@@ -4,13 +4,62 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>04 - Form</title>
+    <title>04 - from</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <main>
-      <h1>Exercise 04 - Form</h1>
+      <h1>Exercise 04 - from</h1>
       <!-- Add your code here -->
+      <form action="/submit" class="user_info">
+        <fieldset>
+          <!-- This legend is put there to avoid an alert-->
+          <legend></legend>
+            <h1>Sign Up form</h1>
+            <p>Fill up the items in the from below.</p>
+            <div>
+              <label for="Name">Name:</label>
+              <input type="text" id="Name" name="Name">
+            </div>
+            <div>
+              <label for="Username">Username:</label>
+              <input type="text" id="Username" name="Username">
+            </div>
+            <div>
+              <label for="Email">Email:</label>
+              <input type="email" id="Email" name="Email">
+            </div>
+            <div>
+              <label for="Password">Password:</label>
+              <input type="password" id="Password" name="Password">
+            </div>
+            <div>
+              <label for="Date_of_Birth">Date of Birth:</label>
+              <input type="datetime-local" id="Date_of_Birth" name="Date_of_Birth">
+            </div>
+            <p>Preferred Pronouns</p>
+            <div>
+              <input type="radio" name="Pronouns" id="She/her">
+              <label for="She/her">She/her</label>
+            </div>
+            <div>
+              <input type="radio" name="Pronouns" id="He/him">
+              <label for="He/him">He/him</label>
+            </div>
+            <div>
+              <input type="radio" name="Pronouns" id="They/Them">
+              <label for="They/Them">They/Them</label>
+            </div>
+            <div>
+              <input type="radio" name="Pronouns" id="unkown">
+              <label for="unkown">I prefer not to say</label>
+            </div>
+            <div class="button_list">
+              <button id="submit">Submit</button>
+              <button id="reset">Reset</button>
+            </div>
+        </fieldset>
+      </form>
     </main>
   </body>
 </html>
