--- a/hw2/02-navbar.html
+++ b/hw2/02-navbar.html
@@ -10,10 +10,18 @@
   <body>
     <!-- Add your code here -->
     <div class="MBN">
-      <div>Ex01</div>
-      <div>Ex02</div>
-      <div>Ex03</div>
-      <div>Ex04</div>
+      <div>
+        <a href="./02-navbar.html">Ex01</a>
+      </div>
+      <div>
+        <a href="./03-table.html">Ex02</a>
+      </div>
+      <div>
+        <a href="./04-form.html">Ex03</a>
+      </div>
+      <div>
+        <a href="./05-cards.html">Ex04</a>
+      </div>
     </div>
     <h1>Exercise 02 - Navbar</h1>
   </body>
