--- a/hw1/02-semantics/02-page-sections.html
+++ b/hw1/02-semantics/02-page-sections.html
@@ -14,10 +14,10 @@
          appropriate (built-in) HTML element -->
     <main>
       <h1 class="overall-title">02 - Page Sections</h1>
-      <div class="general-grouped-info">
-        <p class="sub-title">
+      <section class="general-grouped-info">
+        <h2 class="sub-title">
           Submit Your Application and $60 Application Fee
-        </p>
+        </h2>
         <p class="general-text">
           Go to Portland State University's online application system and select
           Create Account. If you have already started an application, or created
@@ -29,11 +29,11 @@
           your application, we will determine if you are eligible for a fee
           waiver.
         </p>
-      </div>
-      <div class="general-grouped-info">
-        <p class="sub-title">
+      </section>
+      <section class="general-grouped-info">
+        <h2 class="sub-title">
           Submit Transcripts from All Schools Attended
-        </p>
+        </h2>
         <p class="general-text">
           You are required to submit individual transcripts from each college or
           university where you registered for any coursework. Failure to submit
@@ -46,26 +46,26 @@
           Failure to disclose all colleges is a violation of Portland State
           University's student code of conduct.
         </p>
-      </div>
-      <div class="general-grouped-info">
-        <p class="sub-title">
+      </section>
+      <section class="general-grouped-info">
+        <h2 class="sub-title">
           Submit the Free Application for Federal Student Aid(FAFSA)
-        </p>
+        </h2>
         <p class="general-text">
           Submission of the FAFSA is not required to receive an admission
           decision. We encourage students to submit the FAFSA as soon as
           possible after October 1.
         </p>
-      </div>
-      <div class="general-grouped-info">
-        <p class="sub-title">Check Your Application Status</p>
+      </section>
+      <section class="general-grouped-info">
+        <h2 class="sub-title">Check Your Application Status</h2>
         <p class="general-text">
           If you have submitted an application to Portland State University, you
           can log in to PSU's application portal to review the status of your
           application. You will be notified via email for each document you
           submit and your admission decision.
         </p>
-      </div>
+      </section>
     </main>
   </body>
 </html>
