--- a/hw3/03-starships.html
+++ b/hw3/03-starships.html
@@ -15,6 +15,25 @@
         <button class="btn" id="filter">Filter</button>
         <button class="btn" id="reduce">Reduce</button>
       </div>
+      <!--
+      <section class="starships">
+        <section class="main_info">
+          <p>First-</p>
+          <p>Second-</p>
+        </section>
+        <p>Title-des</p>
+        <section class="info">
+          <section class="spec">
+            <p>Data</p>
+            <p>Data2</p>
+          </section>
+          <section class="spec">
+            <p>Data3</p>
+            <p>Data4</p>
+          </section>
+        </section>
+      </section>
+      -->
       <div id="results"></div>
     </main>
   </body>
