--- a/hw3/02-form.html
+++ b/hw3/02-form.html
@@ -12,6 +12,70 @@
     <main>
       <h1>Exercise 02 - Form</h1>
       <!-- You can reuse the form you created in HW 2 -->
+      <form
+        name="Personal_information"
+        action="https://echo.zuplo.io/"
+        class="user_info"
+        method="post"
+      >
+        <fieldset>
+          <!-- This legend is put there to avoid an alert//ThankYou-->
+          <legend></legend>
+          <h1>Sign Up form</h1>
+          <p>Fill up the items in the from below.</p>
+          <section>
+            <label for="Name">Name:</label>
+            <input type="text" id="Name" name="Name" />
+          </section>
+          <section>
+            <label for="Username">Username:</label>
+            <input type="text" id="Username" name="Username" />
+          </section>
+          <section>
+            <label for="Email">Email:</label>
+            <input type="email" id="Email" name="Email" />
+          </section>
+          <section>
+            <label for="Password">Password:</label>
+            <input type="password" id="Password" name="Password" />
+          </section>
+          <section>
+            <label for="Date_of_Birth">Date of Birth:</label>
+            <input
+              type="datetime-local"
+              id="Date_of_Birth"
+              name="Date_of_Birth"
+            />
+          </section>
+          <p>Preferred Pronouns</p>
+          <section>
+            <input type="radio" name="Pronouns" id="She_her" />
+            <label for="She_her">She/her</label>
+          </section>
+          <section>
+            <input type="radio" name="Pronouns" id="He_him" />
+            <label for="He_him">He/him</label>
+          </section>
+          <section>
+            <input type="radio" name="Pronouns" id="They_Them" />
+            <label for="They_Them">They/Them</label>
+          </section>
+          <section>
+            <input type="radio" name="Pronouns" id="unknown" />
+            <label for="unknown">I prefer not to say</label>
+          </section>
+          <section class="button_list">
+            <button
+              id="submit"
+              type="reset"
+              onclick="display_personal_info(this.form)"
+            >
+              Submit
+            </button>
+            <button id="reset" type="reset">Reset</button>
+          </section>
+        </fieldset>
+      </form>
     </main>
   </body>
 </html>
