--- a/hw3/02-form.html
+++ b/hw3/02-form.html
@@ -23,48 +23,48 @@
           <legend></legend>
           <h1>Sign Up form</h1>
           <p>Fill up the items in the from below.</p>
-          <section>
+          <div>
             <label for="Name">Name:</label>
             <input type="text" id="Name" name="Name" />
-          </section>
-          <section>
+          </div>
+          <div>
             <label for="Username">Username:</label>
             <input type="text" id="Username" name="Username" />
-          </section>
-          <section>
+          </div>
+          <div>
             <label for="Email">Email:</label>
             <input type="email" id="Email" name="Email" />
-          </section>
-          <section>
+          </div>
+          <div>
             <label for="Password">Password:</label>
             <input type="password" id="Password" name="Password" />
-          </section>
-          <section>
+          </div>
+          <div>
             <label for="Date_of_Birth">Date of Birth:</label>
             <input
               type="datetime-local"
               id="Date_of_Birth"
               name="Date_of_Birth"
             />
-          </section>
+          </div>
           <p>Preferred Pronouns</p>
-          <section>
+          <div>
             <input type="radio" name="Pronouns" id="She_her" />
             <label for="She_her">She/her</label>
-          </section>
-          <section>
+          </div>
+          <div>
             <input type="radio" name="Pronouns" id="He_him" />
             <label for="He_him">He/him</label>
-          </section>
-          <section>
+          </div>
+          <div>
             <input type="radio" name="Pronouns" id="They_Them" />
             <label for="They_Them">They/Them</label>
-          </section>
-          <section>
+          </div>
+          <div>
             <input type="radio" name="Pronouns" id="unknown" />
             <label for="unknown">I prefer not to say</label>
-          </section>
-          <section class="button_list">
+          </div>
+          <div class="button_list">
             <button
               id="submit"
               type="reset"
@@ -73,7 +73,7 @@
               Submit
             </button>
             <button id="reset" type="reset">Reset</button>
-          </section>
+          </div>
         </fieldset>
       </form>
     </main>
